--- a/infrastructure/nginx.conf
+++ b/infrastructure/nginx.conf
@@ -3,15 +3,66 @@ events {
 }
 
 http {
+  include       mime.types;
+  default_type  application/json;
+
+  # Logging
+  access_log  /var/log/nginx/access.log;
+  error_log   /var/log/nginx/error.log warn;
+
+  # Gzip Compression
+  gzip on;
+  gzip_types text/plain application/json application/javascript text/css application/xml;
+
+  # Rate Limiting
+  limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=10r/s;
+
+  # Hide nginx version
+  server_tokens off;
+
   server {
     listen 80;
+    server_name localhost;
+
+    # Rate limit per IP (10 req/sec, burst 20)
+    limit_req zone=req_limit_per_ip burst=20 nodelay;
 
     location / {
       proxy_pass http://host.docker.internal:8000;
+      proxy_http_version 1.1;
+
+      # Forward headers
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+
+      # WebSocket support (optional, if used)
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+    }
+
+    # Deny access to hidden files
+    location ~ /\. {
+      deny all;
+    }
+
+    # Security headers
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-Frame-Options "DENY";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy "no-referrer-when-downgrade";
+
+    # Optional: handle timeout gracefully
+    proxy_connect_timeout       60;
+    proxy_send_timeout          60;
+    proxy_read_timeout          60;
+    send_timeout                60;
+
+    # Error pages (optional)
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+      root /usr/share/nginx/html;
     }
   }
 }
