--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,85 @@
-[tool.black]
-line-length = 120
-target-version = ["py311"]
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-  | venv
-  | \.env
-  | \.flake8
-  | migrations
-)/
-'''
+[project]
+name = "sukimise"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = [
+    "annotated-types==0.7.0",
+    "anyio==4.9.0",
+    "asgiref==3.8.1",
+    "black==25.1.0",
+    "certifi==2025.1.31",
+    "cfgv==3.4.0",
+    "charset-normalizer==3.4.1",
+    "click==8.1.8",
+    "distlib==0.3.9",
+    "distro==1.9.0",
+    "django==5.2",
+    "django-environ==0.12.0",
+    "django-redis==5.4.0",
+    "django-rest-framework==0.1.0",
+    "django-stubs==5.1.3",
+    "django-stubs-ext==5.1.3",
+    "djangorestframework==3.16.0",
+    "faiss-cpu==1.10.0",
+    "filelock==3.18.0",
+    "flake8==7.2.0",
+    "h11==0.14.0",
+    "httpcore==1.0.7",
+    "httpx==0.28.1",
+    "identify==2.6.10",
+    "idna==3.10",
+    "isort==6.0.1",
+    "jiter==0.9.0",
+    "jsonpatch==1.33",
+    "jsonpointer==3.0.0",
+    "langchain==0.3.23",
+    "langchain-core==0.3.51",
+    "langchain-openai==0.3.12",
+    "langchain-text-splitters==0.3.8",
+    "langsmith==0.3.24",
+    "matplotlib>=3.10.3",
+    "mccabe==0.7.0",
+    "mypy==1.15.0",
+    "mypy-extensions==1.0.0",
+    "nodeenv==1.9.1",
+    "numpy==2.2.4",
+    "openai==1.70.0",
+    "opencv-python>=4.11.0.86",
+    "orjson==3.10.16",
+    "packaging==24.2",
+    "pathspec==0.12.1",
+    "pgvector==0.4.0",
+    "platformdirs==4.3.7",
+    "pre-commit==4.2.0",
+    "psycopg2-binary==2.9.10",
+    "pycodestyle==2.13.0",
+    "pydantic==2.11.2",
+    "pydantic-core==2.33.1",
+    "pyflakes==3.3.2",
+    "pytesseract>=0.3.13",
+    "pyyaml==6.0.2",
+    "redis==5.2.1",
+    "regex==2024.11.6",
+    "requests==2.32.3",
+    "requests-toolbelt==1.0.0",
+    "sniffio==1.3.1",
+    "sqlalchemy==2.0.40",
+    "sqlparse==0.5.3",
+    "tenacity==9.1.2",
+    "tiktoken==0.9.0",
+    "tqdm==4.67.1",
+    "types-pyyaml==6.0.12.20250402",
+    "typing-extensions==4.13.1",
+    "typing-inspection==0.4.0",
+    "urllib3==2.3.0",
+    "virtualenv==20.30.0",
+    "yapf==0.43.0",
+    "zstandard==0.23.0",
+]
 
 [tool.isort]
-profile = "black"
 line_length = 120
 known_third_party = [""]  # Add other third-party libraries as needed
 src_paths = ["src", "apps"]  # Adjust paths as per your project structure
