add neo4j, recommendation app

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,10 @@ dependencies = [
     "mccabe==0.7.0",
     "mypy==1.15.0",
     "mypy-extensions==1.0.0",
+    "neomodel>=5.5.0",
     "nodeenv==1.9.1",
     "numpy==2.2.4",
     "openai==1.70.0",
-    "opencv-python>=4.11.0.86",
     "orjson==3.10.16",
     "packaging==24.2",
     "pathspec==0.12.1",
@@ -58,7 +58,6 @@ dependencies = [
     "pydantic==2.11.2",
     "pydantic-core==2.33.1",
     "pyflakes==3.3.2",
-    "pytesseract>=0.3.13",
     "pyyaml==6.0.2",
     "redis==5.2.1",
     "regex==2024.11.6",
