--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -2,6 +2,20 @@ version: "1.0"
 name: "knowledge_base"
 
 services:
+  neo4j:
+    image: neo4j:latest
+    volumes:
+        - ./neo4j/logs:/logs
+        - ./neo4j/config:/config
+        - ./neo4j/data:/data
+        - ./neo4j/plugins:/plugins
+    environment:
+        - NEO4J_AUTH=neo4j/${NEO4J_PASSWORD}
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    restart: always
+
   postgres:
     image: ankane/pgvector:latest
     container_name: postgres_pgvector
@@ -62,87 +76,87 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     pull_policy: if_not_present
 
-  prometheus:
-    image: prom/prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./prometheus:/etc/prometheus
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-    restart: always
+  # prometheus:
+  #   image: prom/prometheus
+  #   ports:
+  #     - "9090:9090"
+  #   volumes:
+  #     - ./prometheus:/etc/prometheus
+  #   command:
+  #     - "--config.file=/etc/prometheus/prometheus.yml"
+  #   restart: always
 
-  grafana:
-    image: grafana/grafana
-    ports:
-      - "3000:3000"
-    depends_on:
-      - prometheus
-      - loki
-    restart: always
+  # grafana:
+  #   image: grafana/grafana
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - prometheus
+  #     - loki
+  #   restart: always
 
-  loki:
-    image: grafana/loki:latest
-    container_name: loki
-    ports:
-      - "3100:3100"
-    volumes:
-      - ./loki:/etc/loki
-    command:
-      - "--config.file=/etc/loki/local-config.yml"
-    networks:
-      - sukimise
+  # loki:
+  #   image: grafana/loki:latest
+  #   container_name: loki
+  #   ports:
+  #     - "3100:3100"
+  #   volumes:
+  #     - ./loki:/etc/loki
+  #   command:
+  #     - "--config.file=/etc/loki/local-config.yml"
+  #   networks:
+  #     - sukimise
 
-  promtail:
-    image: grafana/promtail:latest
-    container_name: promtail
-    volumes:
-      - ./promtail:/etc/promtail
-      - ./promtail/var/log:/var/log
-    command:
-      - "--config.file=/etc/promtail/config.yml"
-    networks:
-      - sukimise
-    depends_on:
-      - loki
+  # promtail:
+  #   image: grafana/promtail:latest
+  #   container_name: promtail
+  #   volumes:
+  #     - ./promtail:/etc/promtail
+  #     - ./promtail/var/log:/var/log
+  #   command:
+  #     - "--config.file=/etc/promtail/config.yml"
+  #   networks:
+  #     - sukimise
+  #   depends_on:
+  #     - loki
 
-  postgres_exporter:
-    image: prometheuscommunity/postgres-exporter
-    container_name: postgres_exporter
-    environment:
-      DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?sslmode=disable"
-    ports:
-      - "9187:9187"
-    networks:
-      - sukimise
-    depends_on:
-      postgres:
-        condition: service_healthy
+  # postgres_exporter:
+  #   image: prometheuscommunity/postgres-exporter
+  #   container_name: postgres_exporter
+  #   environment:
+  #     DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?sslmode=disable"
+  #   ports:
+  #     - "9187:9187"
+  #   networks:
+  #     - sukimise
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
 
-  redis_exporter:
-    image: oliver006/redis_exporter
-    container_name: redis_exporter
-    environment:
-      REDIS_ADDR: "redis:6379"
-    ports:
-      - "9121:9121"
-    networks:
-      - sukimise
-    depends_on:
-      redis:
-        condition: service_healthy
+  # redis_exporter:
+  #   image: oliver006/redis_exporter
+  #   container_name: redis_exporter
+  #   environment:
+  #     REDIS_ADDR: "redis:6379"
+  #   ports:
+  #     - "9121:9121"
+  #   networks:
+  #     - sukimise
+  #   depends_on:
+  #     redis:
+  #       condition: service_healthy
 
-  nginx_exporter:
-    image: nginx/nginx-prometheus-exporter
-    container_name: nginx_exporter
-    command:
-      - "-nginx.scrape-uri=http://nginx/nginx_status"
-    ports:
-      - "9113:9113"
-    networks:
-      - sukimise
-    depends_on:
-      - nginx
+  # nginx_exporter:
+  #   image: nginx/nginx-prometheus-exporter
+  #   container_name: nginx_exporter
+  #   command:
+  #     - "-nginx.scrape-uri=http://nginx/nginx_status"
+  #   ports:
+  #     - "9113:9113"
+  #   networks:
+  #     - sukimise
+  #   depends_on:
+  #     - nginx
 
 networks:
   sukimise:
@@ -151,3 +165,4 @@ networks:
 volumes:
   postgres_pgvector:
   redis:
+  neo4j:
