--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
 OPENAI_API_KEY=
+
+NEO4J_BOLT_URL=
+
+POSTGRES_DB_NAME=
+POSTGRES_DB_USER=
+POSTGRES_DB_PASSWORD=
+POSTGRES_DB_HOST=
+POSTGRES_DB_PORT=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_DB=
