--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "distro==1.9.0",
     "django==5.2",
     "django-environ==0.12.0",
+    "django-neomodel>=0.2.0",
     "django-redis==5.4.0",
     "django-rest-framework==0.1.0",
     "django-stubs==5.1.3",
@@ -43,7 +44,6 @@ dependencies = [
     "mccabe==0.7.0",
     "mypy==1.15.0",
     "mypy-extensions==1.0.0",
-    "neomodel>=5.5.0",
     "nodeenv==1.9.1",
     "numpy==2.2.4",
     "openai==1.70.0",
